--- a/view/user/order_confirmation.ejs
+++ b/view/user/order_confirmation.ejs
@@ -1,140 +1,170 @@
-  
-    <%- include('partials/header.ejs') %>
-    <!--================Home Banner Area =================-->
-    <!-- breadcrumb start-->
-    <section class="breadcrumb breadcrumb_bg">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <div class="breadcrumb_iner">
-              <div class="breadcrumb_iner_item">
-                <h2>Order Confirmation</h2>
-                <p>Home <span>-</span> Order Confirmation</p>
+<%- include('partials/header.ejs') %>
+
+<section class="confirmation_part padding_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="container">
+          <div class="row">
+            <!-- <div class="col-lg-6">
+              <div class="single_confirmation_details">
+                <h4>order info</h4>
+                <ul>
+                  <li>
+                    <p>order id</p>
+                    <span>: </span>
+                  </li>
+
+                  <li>
+                    <p>total</p>
+                    <span>: INR</span>
+                  </li>
+                </ul>
+              </div>
+            </div> -->
+            <div class="col-lg-12">
+              <div class="single_confirmation_details">
+                <h4>Shipping Address</h4>
+                <ul>
+                  <li>
+                    <p>House</p>
+                    <span>: <%= address.house %></span>
+                  </li>
+                  <li>
+                    <p>Landmark</p>
+                    <span>: <%= address.landmark %></span>
+                  </li>
+                  <li>
+                    <p>City</p>
+                    <span>: <%= address.city %></span>
+                  </li>
+                  <li>
+                    <p>State</p>
+                    <span>: <%= address.state %></span>
+                  </li>
+                  <li>
+                    <p>postcode</p>
+                    <span>: <%= address.pincode %></span>
+                  </li>
+                </ul>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- breadcrumb start-->
-  
-    <!--================ confirmation part start =================-->
-    <section class="confirmation_part padding_top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="confirmation_tittle">
-              <span>Thank you. Your order has been received.</span>
+            <div class="col-lg-12">
+              <div class="order_details_iner">
+                <h3>Product Details</h3>
+                <table class="table table-borderless">
+                  <thead>
+                    <tr>
+                      <th scope="col" colspan="2">Product</th>
+                      <th scope="col">Quantity</th>
+                      <th scope="col">Total</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% order.products.forEach(el => { %>
+                    <tr>
+                      <th colspan="2"><span><%= el.product.title %> </span></th>
+                      <th>x<%= el.quantity %></th>
+                      <th><span>₹<%= el.subtotal %></span></th>
+                    </tr>
+                    <% }) %>
+                    <tr>
+                      <th colspan="3">Subtotal</th>
+                      <th>₹<%= order.total %></th>
+                    </tr>
+                    <tr>
+                      <th colspan="3">shipping</th>
+                      <th>₹50.00</th>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <th scope="col" colspan="3"></th>
+                      <th scope="col">₹<%= order.total+50 %></th>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-6 col-lx-4">
-            <div class="single_confirmation_details">
-              <h4>order info</h4>
-              <ul>
-                <li>
-                  <p>order number</p><span>: 60235</span>
-                </li>
-                <li>
-                  <p>data</p><span>: Oct 03, 2017</span>
-                </li>
-                <li>
-                  <p>total</p><span>: USD 2210</span>
-                </li>
-                <li>
-                  <p>mayment methord</p><span>: Check payments</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <!-- <div class="col-lg-6 col-lx-4">
-            <div class="single_confirmation_details">
-              <h4>Billing Address</h4>
-              <ul>
-                <li>
-                  <p>Street</p><span>: 56/8</span>
-                </li>
-                <li>
-                  <p>city</p><span>: Los Angeles</span>
-                </li>
-                <li>
-                  <p>country</p><span>: United States</span>
-                </li>
-                <li>
-                  <p>postcode</p><span>: 36952</span>
-                </li>
-              </ul>
-            </div>
-          </div> -->
-          <div class="col-lg-6 col-lx-4">
-            <div class="single_confirmation_details">
-              <h4>shipping Address</h4>
-              <ul>
-                <li>
-                  <p>Street</p><span>: 56/8</span>
-                </li>
-                <li>
-                  <p>city</p><span>: Los Angeles</span>
-                </li>
-                <li>
-                  <p>country</p><span>: United States</span>
-                </li>
-                <li>
-                  <p>postcode</p><span>: 36952</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="order_details_iner">
-              <h3>Product Details</h3>
-              <table class="table table-borderless">
-                <thead>
-                  <tr>
-                    <th scope="col" colspan="2">Product</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Total</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                    <th>x02</th>
-                    <th> <span>₹720.00</span></th>
-                  </tr>
-                  <tr>
-                    <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                    <th>x02</th>
-                    <th> <span>₹720.00</span></th>
-                  </tr>
-                  <tr>
-                    <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                    <th>x02</th>
-                    <th> <span>₹720.00</span></th>
-                  </tr>
-                  <tr>
-                    <th colspan="3">Subtotal</th>
-                    <th> <span>₹2160.00</span></th>
-                  </tr>
-                  <tr>
-                    <th colspan="3">shipping</th>
-                    <th><span>flat rate: ₹50.00</span></th>
-                  </tr>
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <th scope="col" colspan="3">Quantity</th>
-                    <th scope="col">Total</th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-          </div>
-        </div>
 
+
+          </div>
+        </div>
       </div>
-    </section>
-    <!--================ confirmation part end =================-->
-  
-    <%- include('partials/footer.ejs') %>
+
+      <div class="col-lg-4">
+        <div class="order_box mt-3">
+          <h2>Payment Method</h2>
+
+          <a href="#">
+            <button type="button" class="btn btn-dark btn-lg btn-block mt-3">Cash On Delivery</button>
+          </a>
+          <a href="#">
+            <button type="button" id="rzp-button1" class="btn btn-warning btn-lg btn-block mt-3">Pay</button>
+          </a>
+          <a href="#">
+            <button type="button" class="btn btn-primary btn-lg btn-block mt-3">Paypal</button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+  var orderId;
+  $(document).ready(function () {
+    var settings = {
+      url: '/create/orderId',
+      method: 'POST',
+      timeout: 0,
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      data: JSON.stringify({
+        amount: '<%= ((order.total+50)*100) %>',
+      }),
+    };
+
+    //creates new orderId everytime
+    $.ajax(settings).done(function (response) {
+      orderId = response.orderId;
+      console.log(orderId);
+      $('#rzp-button1').show();
+    });
+  });
+
+  document.getElementById('rzp-button1').onclick = function (e) {
+    var options = {
+      key: '<%= key %>', // Enter the Key ID generated from the Dashboard
+      amount: '<%= ((order.total+50)*100) %>', // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+      currency: 'INR',
+      name: 'Hourglass',
+      description: 'Buy Furniture',
+      image: 'https://example.com/your_logo',
+      order_id: orderId, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+      handler: function (response) {
+        alert(response.razorpay_payment_id);
+        alert(response.razorpay_order_id);
+        alert(response.razorpay_signature);
+      },
+      theme: {
+        color: '#3399cc',
+      },
+    };
+    var rzp1 = new Razorpay(options);
+    rzp1.on('payment.failed', function (response) {
+      alert(response.error.code);
+      alert(response.error.description);
+      alert(response.error.source);
+      alert(response.error.step);
+      alert(response.error.reason);
+      alert(response.error.metadata.order_id);
+      alert(response.error.metadata.payment_id);
+    });
+    rzp1.open();
+    e.preventDefault();
+  };
+</script>
+<%- include('partials/footer.ejs') %>
