admin orders page modal products details

--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -43,7 +43,7 @@
                     class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                     type="email"
                     name="email"
-                    placeholder="janedoe@gmail.com"
+                    value="mishal@mail.com"
                     required
                   />
                 </label>
@@ -52,7 +52,7 @@
                   <input
                     class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                     name="password"
-                    placeholder="***************"
+                    value="pinkitom"
                     required
                     type="password"
                   />
