--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -28,6 +28,9 @@
         <!-- You need focus-trap.js to make the modal accessible -->
         <script src="/admin/assets/js/focus-trap.js" defer></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
   </head>
   <body>
